<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_settings"
        android:layout_width="129dp"
        android:layout_height="42dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="Settings"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_add_task_main" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/RV_main"
        android:layout_width="358dp"
        android:layout_height="576dp"
        android:layout_marginTop="12dp"
        android:clipToPadding="false"
        android:paddingBottom="300dp"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_add_task_main" />

    <Button
        android:id="@+id/button_add_task_main"
        android:layout_width="130dp"
        android:layout_height="42dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:text="Add Task"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/login_button_main_activity"
        android:layout_width="100dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="Login"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lougout_button_main_activity" />

    <Button
        android:id="@+id/lougout_button_main_activity"
        android:layout_width="100dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="Logout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>